--- a/estimativa_cre/estimativa_cre.ipynb
+++ b/estimativa_cre/estimativa_cre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "9a8f87df",
    "metadata": {},
    "outputs": [],
@@ -14,35 +14,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "a53e9ae2",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IOException",
-     "evalue": "IO Error: No files found that match the pattern \"data/estimativa_cre.parquet\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mIOException\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m con = duckdb.connect(database=\u001b[33m'\u001b[39m\u001b[33m:memory:\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m df_duck = \u001b[43mcon\u001b[49m\u001b[43m.\u001b[49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\"\"\u001b[39;49m\n\u001b[32m      4\u001b[39m \u001b[33;43m    SELECT * FROM \u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdata/estimativa_cre.parquet\u001b[39;49m\u001b[33;43m'\u001b[39;49m\n\u001b[32m      5\u001b[39m \u001b[33;43m    \u001b[39;49m\u001b[33;43m\"\"\"\u001b[39;49m\u001b[43m)\u001b[49m.df()\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(df_duck)\n",
-      "\u001b[31mIOException\u001b[39m: IO Error: No files found that match the pattern \"data/estimativa_cre.parquet\""
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  ug_codigo                      descricao_ug  fonte_recurso  \\\n",
+      "0    140001  SECRETARIA DE ESTADO DE FINANCAS          500.0   \n",
+      "1    140001  SECRETARIA DE ESTADO DE FINANCAS          500.0   \n",
+      "2    140001  SECRETARIA DE ESTADO DE FINANCAS          500.0   \n",
+      "3    140001  SECRETARIA DE ESTADO DE FINANCAS          500.0   \n",
+      "4    140001  SECRETARIA DE ESTADO DE FINANCAS          500.0   \n",
+      "5    140001  SECRETARIA DE ESTADO DE FINANCAS          500.0   \n",
+      "6    140001  SECRETARIA DE ESTADO DE FINANCAS          500.0   \n",
+      "7    140001  SECRETARIA DE ESTADO DE FINANCAS          500.0   \n",
+      "8    140001  SECRETARIA DE ESTADO DE FINANCAS          501.0   \n",
+      "9    140001  SECRETARIA DE ESTADO DE FINANCAS          500.0   \n",
+      "\n",
+      "                        descricao_fonte  classificacao_ajustada  \\\n",
+      "0  Recursos não Vinculados de Impostos.              11125101.0   \n",
+      "1  Recursos não Vinculados de Impostos.              11125101.0   \n",
+      "2  Recursos não Vinculados de Impostos.              11125102.0   \n",
+      "3  Recursos não Vinculados de Impostos.              11125103.0   \n",
+      "4  Recursos não Vinculados de Impostos.              11125104.0   \n",
+      "5  Recursos não Vinculados de Impostos.              11125201.0   \n",
+      "6  Recursos não Vinculados de Impostos.              11125201.0   \n",
+      "7  Recursos não Vinculados de Impostos.              11125202.0   \n",
+      "8        Outros Recursos não Vinculados              11125203.0   \n",
+      "9  Recursos não Vinculados de Impostos.              11125203.0   \n",
+      "\n",
+      "  classificacao_intra                               nomenclatura_receita  \\\n",
+      "0                None  Imposto sobre a Propriedade de Veículos Automo...   \n",
+      "1                None  RENÚNCIA POTENCIAL - Imposto sobre a Proprieda...   \n",
+      "2                None  Imposto sobre a Propriedade de Veículos Automo...   \n",
+      "3                None  Imposto sobre a Propriedade de Veículos Automo...   \n",
+      "4                None  Imposto sobre a Propriedade de Veículos Automo...   \n",
+      "5                None  Imposto sobre Transmissão “Causa Mortis” e Doa...   \n",
+      "6                None  Imposto sobre Transmissão “Causa Mortis” e Doa...   \n",
+      "7                None  Imposto sobre Transmissão “Causa Mortis” e Doa...   \n",
+      "8                None                        ITCMD Dívida Ativa - Estado   \n",
+      "9                None                        ITCMD Dívida Ativa - Estado   \n",
+      "\n",
+      "             rec_grupo        rec_subgrupo     metodo_principal   ano  mes  \\\n",
+      "0        Receita Bruta    Receita Estimada           IPCA + PIB  2023    1   \n",
+      "1  Deduções da Receita  Renúncia Potencial  RENÚNCIA POTENCIAL   2023    1   \n",
+      "2        Receita Bruta    Receita Estimada         IPCA + PIB m  2023    1   \n",
+      "3        Receita Bruta    Receita Estimada         IPCA + PIB m  2023    1   \n",
+      "4        Receita Bruta    Receita Estimada         IPCA + PIB m  2023    1   \n",
+      "5        Receita Bruta    Receita Estimada                  MQO  2023    1   \n",
+      "6  Deduções da Receita  Renúncia Potencial  RENÚNCIA POTENCIAL   2023    1   \n",
+      "7        Receita Bruta    Receita Estimada                  MQO  2023    1   \n",
+      "8        Receita Bruta    Receita Estimada         NÃO PROJETAR  2023    1   \n",
+      "9        Receita Bruta    Receita Estimada         NÃO PROJETAR  2023    1   \n",
+      "\n",
+      "         valor  \n",
+      "0  56711265.78  \n",
+      "1         0.00  \n",
+      "2   1853791.81  \n",
+      "3   1731592.18  \n",
+      "4    676335.36  \n",
+      "5   1622645.15  \n",
+      "6         0.00  \n",
+      "7     18481.31  \n",
+      "8     15256.33  \n",
+      "9         0.00  \n"
      ]
     }
    ],
    "source": [
     "con = duckdb.connect(database=':memory:')\n",
     "\n",
-    "df_duck = con.execute(\"\"\"\n",
-    "    SELECT * FROM 'data/estimativa_cre.parquet'\n",
-    "    \"\"\").df()\n",
+    "# Cria tabela no DuckDB a partir do parquet\n",
+    "con.execute(f\"\"\"\n",
+    "    CREATE TABLE estimativa_cre AS \n",
+    "    SELECT * FROM 'data/processed/estimativa_cre_16-06-25.parquet'\n",
+    "\"\"\")\n",
+    "\n",
+    "# Consulta inicial (pode ser LIMIT 10 para preview)\n",
+    "df_duck = con.execute(\"SELECT * FROM estimativa_cre LIMIT 10\").df()\n",
     "\n",
     "print(df_duck)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c7529e22",
    "metadata": {},
    "outputs": [
@@ -69,7 +128,7 @@
     "# Cria tabela a partir do Parquet (nome lógico: estimativa_cre)\n",
     "con.execute(\"\"\"\n",
     "    CREATE TABLE estimativa_cre AS \n",
-    "    SELECT * FROM 'data/estimativa_cre.parquet'\n",
+    "    SELECT * FROM 'data/processed/estimativa_cre_16-06-25.parquet'\n",
     "\"\"\")\n",
     "\n",
     "# DataFrame com preview das colunas (para enviar ao prompt)\n",
@@ -171,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
