--- a/estimativa_cre/estimativa_cre.ipynb
+++ b/estimativa_cre/estimativa_cre.ipynb
@@ -2,86 +2,119 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "id": "9a8f87df",
    "metadata": {},
    "outputs": [],
    "source": [
     "import duckdb\n",
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "\n",
+    "PAI_DIR = os.getcwd()  # diretório atual para notebooks jupyter\n",
+    "DATA_DIR = os.path.join(PAI_DIR, \"data\", \"processed\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "id": "a53e9ae2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  ug_codigo                      descricao_ug  fonte_recurso  \\\n",
-      "0    140001  SECRETARIA DE ESTADO DE FINANCAS          500.0   \n",
-      "1    140001  SECRETARIA DE ESTADO DE FINANCAS          500.0   \n",
-      "2    140001  SECRETARIA DE ESTADO DE FINANCAS          500.0   \n",
-      "3    140001  SECRETARIA DE ESTADO DE FINANCAS          500.0   \n",
-      "4    140001  SECRETARIA DE ESTADO DE FINANCAS          500.0   \n",
-      "5    140001  SECRETARIA DE ESTADO DE FINANCAS          500.0   \n",
-      "6    140001  SECRETARIA DE ESTADO DE FINANCAS          500.0   \n",
-      "7    140001  SECRETARIA DE ESTADO DE FINANCAS          500.0   \n",
-      "8    140001  SECRETARIA DE ESTADO DE FINANCAS          501.0   \n",
-      "9    140001  SECRETARIA DE ESTADO DE FINANCAS          500.0   \n",
-      "\n",
-      "                        descricao_fonte  classificacao_ajustada  \\\n",
-      "0  Recursos não Vinculados de Impostos.              11125101.0   \n",
-      "1  Recursos não Vinculados de Impostos.              11125101.0   \n",
-      "2  Recursos não Vinculados de Impostos.              11125102.0   \n",
-      "3  Recursos não Vinculados de Impostos.              11125103.0   \n",
-      "4  Recursos não Vinculados de Impostos.              11125104.0   \n",
-      "5  Recursos não Vinculados de Impostos.              11125201.0   \n",
-      "6  Recursos não Vinculados de Impostos.              11125201.0   \n",
-      "7  Recursos não Vinculados de Impostos.              11125202.0   \n",
-      "8        Outros Recursos não Vinculados              11125203.0   \n",
-      "9  Recursos não Vinculados de Impostos.              11125203.0   \n",
-      "\n",
-      "  classificacao_intra                               nomenclatura_receita  \\\n",
-      "0                None  Imposto sobre a Propriedade de Veículos Automo...   \n",
-      "1                None  RENÚNCIA POTENCIAL - Imposto sobre a Proprieda...   \n",
-      "2                None  Imposto sobre a Propriedade de Veículos Automo...   \n",
-      "3                None  Imposto sobre a Propriedade de Veículos Automo...   \n",
-      "4                None  Imposto sobre a Propriedade de Veículos Automo...   \n",
-      "5                None  Imposto sobre Transmissão “Causa Mortis” e Doa...   \n",
-      "6                None  Imposto sobre Transmissão “Causa Mortis” e Doa...   \n",
-      "7                None  Imposto sobre Transmissão “Causa Mortis” e Doa...   \n",
-      "8                None                        ITCMD Dívida Ativa - Estado   \n",
-      "9                None                        ITCMD Dívida Ativa - Estado   \n",
-      "\n",
-      "             rec_grupo        rec_subgrupo     metodo_principal   ano  mes  \\\n",
-      "0        Receita Bruta    Receita Estimada           IPCA + PIB  2023    1   \n",
-      "1  Deduções da Receita  Renúncia Potencial  RENÚNCIA POTENCIAL   2023    1   \n",
-      "2        Receita Bruta    Receita Estimada         IPCA + PIB m  2023    1   \n",
-      "3        Receita Bruta    Receita Estimada         IPCA + PIB m  2023    1   \n",
-      "4        Receita Bruta    Receita Estimada         IPCA + PIB m  2023    1   \n",
-      "5        Receita Bruta    Receita Estimada                  MQO  2023    1   \n",
-      "6  Deduções da Receita  Renúncia Potencial  RENÚNCIA POTENCIAL   2023    1   \n",
-      "7        Receita Bruta    Receita Estimada                  MQO  2023    1   \n",
-      "8        Receita Bruta    Receita Estimada         NÃO PROJETAR  2023    1   \n",
-      "9        Receita Bruta    Receita Estimada         NÃO PROJETAR  2023    1   \n",
-      "\n",
-      "         valor  \n",
-      "0  56711265.78  \n",
-      "1         0.00  \n",
-      "2   1853791.81  \n",
-      "3   1731592.18  \n",
-      "4    676335.36  \n",
-      "5   1622645.15  \n",
-      "6         0.00  \n",
-      "7     18481.31  \n",
-      "8     15256.33  \n",
-      "9         0.00  \n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ug_codigo</th>\n",
+       "      <th>descricao_ug</th>\n",
+       "      <th>fonte_recurso</th>\n",
+       "      <th>descricao_fonte</th>\n",
+       "      <th>classificacao_ajustada</th>\n",
+       "      <th>classificacao_intra</th>\n",
+       "      <th>nomenclatura_receita</th>\n",
+       "      <th>rec_grupo</th>\n",
+       "      <th>rec_subgrupo</th>\n",
+       "      <th>metodo_principal</th>\n",
+       "      <th>ano</th>\n",
+       "      <th>mes</th>\n",
+       "      <th>valor</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>140001</td>\n",
+       "      <td>SECRETARIA DE ESTADO DE FINANCAS</td>\n",
+       "      <td>500.0</td>\n",
+       "      <td>Recursos não Vinculados de Impostos.</td>\n",
+       "      <td>11125201.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Imposto sobre Transmissão “Causa Mortis” e Doa...</td>\n",
+       "      <td>Receita Bruta</td>\n",
+       "      <td>Receita Estimada</td>\n",
+       "      <td>MQO</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1622645.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>140001</td>\n",
+       "      <td>SECRETARIA DE ESTADO DE FINANCAS</td>\n",
+       "      <td>501.0</td>\n",
+       "      <td>Outros Recursos não Vinculados</td>\n",
+       "      <td>11125203.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ITCMD Dívida Ativa - Estado</td>\n",
+       "      <td>Receita Bruta</td>\n",
+       "      <td>Receita Estimada</td>\n",
+       "      <td>NÃO PROJETAR</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15256.33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  ug_codigo                      descricao_ug  fonte_recurso  \\\n",
+       "5    140001  SECRETARIA DE ESTADO DE FINANCAS          500.0   \n",
+       "8    140001  SECRETARIA DE ESTADO DE FINANCAS          501.0   \n",
+       "\n",
+       "                        descricao_fonte  classificacao_ajustada  \\\n",
+       "5  Recursos não Vinculados de Impostos.              11125201.0   \n",
+       "8        Outros Recursos não Vinculados              11125203.0   \n",
+       "\n",
+       "  classificacao_intra                               nomenclatura_receita  \\\n",
+       "5                None  Imposto sobre Transmissão “Causa Mortis” e Doa...   \n",
+       "8                None                        ITCMD Dívida Ativa - Estado   \n",
+       "\n",
+       "       rec_grupo      rec_subgrupo metodo_principal   ano  mes       valor  \n",
+       "5  Receita Bruta  Receita Estimada              MQO  2023    1  1622645.15  \n",
+       "8  Receita Bruta  Receita Estimada     NÃO PROJETAR  2023    1    15256.33  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -90,61 +123,29 @@
     "# Cria tabela no DuckDB a partir do parquet\n",
     "con.execute(f\"\"\"\n",
     "    CREATE TABLE estimativa_cre AS \n",
-    "    SELECT * FROM 'data/processed/estimativa_cre_16-06-25.parquet'\n",
+    "    SELECT * FROM '{DATA_DIR}/estimativa_cre_16-06-25.parquet'\n",
     "\"\"\")\n",
     "\n",
     "# Consulta inicial (pode ser LIMIT 10 para preview)\n",
     "df_duck = con.execute(\"SELECT * FROM estimativa_cre LIMIT 10\").df()\n",
     "\n",
-    "print(df_duck)"
+    "df_duck.sample(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "c7529e22",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IOException",
-     "evalue": "IO Error: No files found that match the pattern \"data/estimativa_cre.parquet\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mIOException\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      6\u001b[39m con = duckdb.connect(database=\u001b[33m\"\u001b[39m\u001b[33m:memory:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      8\u001b[39m \u001b[38;5;66;03m# Cria tabela a partir do Parquet (nome lógico: estimativa_cre)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[43mcon\u001b[49m\u001b[43m.\u001b[49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\"\"\u001b[39;49m\n\u001b[32m     10\u001b[39m \u001b[33;43m    CREATE TABLE estimativa_cre AS \u001b[39;49m\n\u001b[32m     11\u001b[39m \u001b[33;43m    SELECT * FROM \u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdata/estimativa_cre.parquet\u001b[39;49m\u001b[33;43m'\u001b[39;49m\n\u001b[32m     12\u001b[39m \u001b[33;43m\"\"\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m# DataFrame com preview das colunas (para enviar ao prompt)\u001b[39;00m\n\u001b[32m     15\u001b[39m df_duck = con.execute(\u001b[33m\"\u001b[39m\u001b[33mSELECT * FROM estimativa_cre LIMIT 5\u001b[39m\u001b[33m\"\u001b[39m).df()\n",
-      "\u001b[31mIOException\u001b[39m: IO Error: No files found that match the pattern \"data/estimativa_cre.parquet\""
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from openai import OpenAI\n",
     "\n",
-    "# ========================\n",
-    "# 1. Conexão DuckDB e carregamento do Parquet\n",
-    "# ========================\n",
-    "con = duckdb.connect(database=\":memory:\")\n",
-    "\n",
-    "# Cria tabela a partir do Parquet (nome lógico: estimativa_cre)\n",
-    "con.execute(\"\"\"\n",
-    "    CREATE TABLE estimativa_cre AS \n",
-    "    SELECT * FROM 'data/processed/estimativa_cre_16-06-25.parquet'\n",
-    "\"\"\")\n",
-    "\n",
-    "# DataFrame com preview das colunas (para enviar ao prompt)\n",
-    "df_duck = con.execute(\"SELECT * FROM estimativa_cre LIMIT 5\").df()\n",
-    "\n",
-    "# ========================\n",
-    "# 2. Conexão com modelo da HuggingFace\n",
-    "# ========================\n",
     "client = OpenAI(\n",
     "    base_url=\"https://router.huggingface.co/v1\",\n",
     "    api_key=os.getenv(\"HF_TOKEN\"),\n",
     ")\n",
     "\n",
-    "# ========================\n",
-    "# 3. Função de consulta via IA\n",
-    "# ========================\n",
     "def consulta_ia(pergunta: str):\n",
     "    prompt = f\"\"\"\n",
     "    Você é um assistente que gera consultas SQL para DuckDB.\n",
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "id": "ea0ec056",
    "metadata": {},
    "outputs": [
@@ -184,18 +185,15 @@
      "output_type": "stream",
      "text": [
       "Query usada:\n",
-      " SELECT ano, SUM(valor) AS total_arrecadado \n",
-      "FROM estimativa_cre \n",
-      "WHERE nova_fonte = 500 \n",
-      "GROUP BY ano\n",
+      " SELECT SUM(valor) AS total_arrecadado FROM estimativa_cre WHERE fonte_recurso = 500 GROUP BY ano\n",
       "\n",
       "Resultado:\n",
-      "     ano  total_arrecadado\n",
-      "0  2023      8.622825e+09\n",
-      "1  2024      1.002981e+10\n",
-      "2  2025      1.069943e+10\n",
-      "3  2026      1.127532e+10\n",
-      "4  2027      1.216892e+10\n"
+      "    total_arrecadado\n",
+      "0      8.622825e+09\n",
+      "1      1.002981e+10\n",
+      "2      1.069943e+10\n",
+      "3      1.127532e+10\n",
+      "4      1.216892e+10\n"
      ]
     }
    ],
@@ -207,8 +205,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "63800560",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mes</th>\n",
+       "      <th>total_arrecadado</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>8.729471e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>9.823469e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>8.355140e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>8.609253e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>9.494757e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>9.387981e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>7.862592e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>8.799675e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>7.925028e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>8.150094e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>9.170787e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>1.068607e+09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    mes  total_arrecadado\n",
+       "0     1      8.729471e+08\n",
+       "1     2      9.823469e+08\n",
+       "2     3      8.355140e+08\n",
+       "3     4      8.609253e+08\n",
+       "4     5      9.494757e+08\n",
+       "5     6      9.387981e+08\n",
+       "6     7      7.862592e+08\n",
+       "7     8      8.799675e+08\n",
+       "8     9      7.925028e+08\n",
+       "9    10      8.150094e+08\n",
+       "10   11      9.170787e+08\n",
+       "11   12      1.068607e+09"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Consulta SQL\n",
+    "resultado = con.execute(\"\"\"\n",
+    "    SELECT \n",
+    "        mes, SUM(valor) AS total_arrecadado \n",
+    "    FROM estimativa_cre \n",
+    "    WHERE fonte_recurso = 500 \n",
+    "    AND ano = '2025'\n",
+    "    GROUP BY mes\n",
+    "\"\"\").df()\n",
+    "\n",
+    "resultado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d2c3cb8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -230,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
