--- a/notebooks/nota_tecnica_fonte_500_501.ipynb
+++ b/notebooks/nota_tecnica_fonte_500_501.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9a8f87df",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4dba46a7",
    "metadata": {},
    "outputs": [],
@@ -41,10 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dfc4d845",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Tabela estimativa_cre_12-08-25 criada a partir de estimativa_cre_12-08-25.parquet\n",
+      "✅ Tabela estimativa_cre_16-06-25 criada a partir de estimativa_cre_16-06-25.parquet\n"
+     ]
+    }
+   ],
    "source": [
     "for arquivo in os.listdir(DATA_PROCESSED):\n",
     "    if arquivo.startswith(\"estimativa_cre_\") and arquivo.endswith(\".parquet\"):\n",
@@ -63,10 +72,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a53e9ae2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tabela 'stg_sigef__fato__execucao_orcamentaria' criada com sucesso!\n",
+      "Tabela 'stg_sigef__dim__acao_programa' criada com sucesso!\n",
+      "Tabela 'stg_sigef__dim__conta_contabil' criada com sucesso!\n",
+      "Tabela 'stg_sigef__dim__credor' criada com sucesso!\n",
+      "Tabela 'stg_sigef__dim__domicilio_bancario' criada com sucesso!\n",
+      "Tabela 'stg_sigef__dim__evento' criada com sucesso!\n",
+      "Tabela 'stg_sigef__dim__fonte_recurso' criada com sucesso!\n",
+      "Tabela 'stg_sigef__dim__grupo_programacao_financeira' criada com sucesso!\n",
+      "Tabela 'stg_sigef__dim__natureza_despesa' criada com sucesso!\n",
+      "Tabela 'stg_sigef__dim__natureza_receita' criada com sucesso!\n",
+      "Tabela 'stg_sigef__dim__unidade_gestora_gestao' criada com sucesso!\n"
+     ]
+    }
+   ],
    "source": [
     "tabelas = [\n",
     "    \"STG_SIGEF__FATO__EXECUCAO_ORCAMENTARIA.parquet\",\n",
@@ -95,47 +122,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bf4fb74e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_est = con.execute(\"SELECT * FROM 'estimativa_cre_12-08-25' where metodo_principal = 'IPCA + PIB m'\").df()\n",
-    "\n",
-    "df_est "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b09ef817",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_est_500 = con.execute('SELECT mes, SUM(valor) FROM \"estimativa_cre_12-08-25\" WHERE fonte_recurso = 500 and ano = 2025 group by mes').df()\n",
-    "df_est_500"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2b5d632e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SIGEF_DB</th>\n",
+       "      <th>MES_REFERENCIA</th>\n",
+       "      <th>ID_UNIDADE_GESTORA_GESTAO</th>\n",
+       "      <th>ID_FONTE_RECURSO</th>\n",
+       "      <th>ID_NATUREZA_RECEITA</th>\n",
+       "      <th>ID_NATUREZA_DESPESA</th>\n",
+       "      <th>ID_ACAO_PROGRAMA</th>\n",
+       "      <th>VALOR_RECEITA_PREVISTA_BRUTA</th>\n",
+       "      <th>VALOR_RECEITA_PREVISTA_BRUTA_COTAS_MENSAIS</th>\n",
+       "      <th>VALOR_RECEITA_PREVISTA_DEDUCOES</th>\n",
+       "      <th>...</th>\n",
+       "      <th>VALOR_DESPESA_CRONOGRAMA_DESEMBOLSO</th>\n",
+       "      <th>VALOR_ALTERACOES_DESPESA_CREDITOS_ADICIONAIS</th>\n",
+       "      <th>VALOR_ALTERACOES_DESPESA_REDUCAO_DESCENTRALIZACAO</th>\n",
+       "      <th>VALOR_ALTERACOES_DESPESA_ACRESCIMO_DESCENTRALIZACAO</th>\n",
+       "      <th>VALOR_DESPESA_CONTIGENCIAMENTO</th>\n",
+       "      <th>VALOR_DESPESA_PREEMPENHOS</th>\n",
+       "      <th>VALOR_DESPESA_OUTRAS_INDISPONIBILIDADES</th>\n",
+       "      <th>VALOR_DESPESA_EMPENHADA</th>\n",
+       "      <th>VALOR_DESPESA_LIQUIDADA</th>\n",
+       "      <th>VALOR_DESPESA_PAGA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SIGEF2024</td>\n",
+       "      <td>2024-10-01</td>\n",
+       "      <td>C22D0252E96E947E3DFC8631E8BF812E</td>\n",
+       "      <td>2A04AE508CD90B773D20F8E04365AE36</td>\n",
+       "      <td>DCEEB932B4BCCF809D21389820688F3C</td>\n",
+       "      <td>7DF52003573D0D5359F9B63DC2269EC6</td>\n",
+       "      <td>00B3DD95B06427FB02E54D0AD2D25C1D</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-299,850</td>\n",
+       "      <td>-299,850</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SIGEF2024</td>\n",
+       "      <td>2024-09-01</td>\n",
+       "      <td>66433312341ADD2DB089AEBB4624289E</td>\n",
+       "      <td>053F3FFFD52D585E61E90EC9C06D8964</td>\n",
+       "      <td>DCEEB932B4BCCF809D21389820688F3C</td>\n",
+       "      <td>4D5CD55A6F90399697C36F232E9F98B8</td>\n",
+       "      <td>D379C01D8D4EDA876821FF1594DB45AB</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-8,450</td>\n",
+       "      <td>-8,450</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    SIGEF_DB MES_REFERENCIA         ID_UNIDADE_GESTORA_GESTAO  \\\n",
+       "0  SIGEF2024     2024-10-01  C22D0252E96E947E3DFC8631E8BF812E   \n",
+       "1  SIGEF2024     2024-09-01  66433312341ADD2DB089AEBB4624289E   \n",
+       "\n",
+       "                   ID_FONTE_RECURSO               ID_NATUREZA_RECEITA  \\\n",
+       "0  2A04AE508CD90B773D20F8E04365AE36  DCEEB932B4BCCF809D21389820688F3C   \n",
+       "1  053F3FFFD52D585E61E90EC9C06D8964  DCEEB932B4BCCF809D21389820688F3C   \n",
+       "\n",
+       "                ID_NATUREZA_DESPESA                  ID_ACAO_PROGRAMA  \\\n",
+       "0  7DF52003573D0D5359F9B63DC2269EC6  00B3DD95B06427FB02E54D0AD2D25C1D   \n",
+       "1  4D5CD55A6F90399697C36F232E9F98B8  D379C01D8D4EDA876821FF1594DB45AB   \n",
+       "\n",
+       "   VALOR_RECEITA_PREVISTA_BRUTA  VALOR_RECEITA_PREVISTA_BRUTA_COTAS_MENSAIS  \\\n",
+       "0                             0                                           0   \n",
+       "1                             0                                           0   \n",
+       "\n",
+       "   VALOR_RECEITA_PREVISTA_DEDUCOES  ...  VALOR_DESPESA_CRONOGRAMA_DESEMBOLSO  \\\n",
+       "0                                0  ...                                    0   \n",
+       "1                                0  ...                                    0   \n",
+       "\n",
+       "   VALOR_ALTERACOES_DESPESA_CREDITOS_ADICIONAIS  \\\n",
+       "0                                             0   \n",
+       "1                                             0   \n",
+       "\n",
+       "   VALOR_ALTERACOES_DESPESA_REDUCAO_DESCENTRALIZACAO  \\\n",
+       "0                                                  0   \n",
+       "1                                                  0   \n",
+       "\n",
+       "   VALOR_ALTERACOES_DESPESA_ACRESCIMO_DESCENTRALIZACAO  \\\n",
+       "0                                                  0     \n",
+       "1                                                  0     \n",
+       "\n",
+       "   VALOR_DESPESA_CONTIGENCIAMENTO  VALOR_DESPESA_PREEMPENHOS  \\\n",
+       "0                               0                          0   \n",
+       "1                               0                          0   \n",
+       "\n",
+       "   VALOR_DESPESA_OUTRAS_INDISPONIBILIDADES  VALOR_DESPESA_EMPENHADA  \\\n",
+       "0                                        0                 -299,850   \n",
+       "1                                        0                   -8,450   \n",
+       "\n",
+       "   VALOR_DESPESA_LIQUIDADA  VALOR_DESPESA_PAGA  \n",
+       "0                 -299,850                   0  \n",
+       "1                   -8,450                   0  \n",
+       "\n",
+       "[2 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_fato = con.execute(\"SELECT * FROM STG_SIGEF__FATO__EXECUCAO_ORCAMENTARIA LIMIT 2\").df()\n",
     "df_fato"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea0aa497",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_fonte = con.execute(\"SELECT * FROM stg_sigef__dim__fonte_recurso LIMIT 2\").df()\n",
-    "df_fonte"
    ]
   },
   {
@@ -145,7 +289,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Consulta inicial (pode ser LIMIT 10 para preview)\n",
     "df_duck = con.execute(\"\"\"\n",
     "    SELECT \n",
     "        EXTRACT(MONTH FROM a.MES_REFERENCIA) AS MES,\n",
