--- a/notebooks/precatorios.ipynb
+++ b/notebooks/precatorios.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "Consulta realizada nas Notas de Lançamento Contábeis no SIGEF por meio do evento nº 540905 (APROPRIAÇÃO DE PRECATÓRIOS) - Totais por mês.\n",
-    "Após a apropriação do saldo é confeccionado as Preparação Pagamento (Extra Orçamentaria) evento precatorios 700023 - valores individuais boletos"
+    "Após a apropriação do saldo é confeccionado as Preparação Pagamento (Extra Orçamentaria) evento precatorios 700023 - valores individuais boletos\n",
+    "Janeiro e Fevereiro de 2022 foram pagamentos por ofício, não hã NL, apenas PP e OBs. "
    ]
   },
   {
@@ -2124,7 +2125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
